--- a/weather01.css
+++ b/weather01.css
@@ -15,7 +15,7 @@
 body {
     color: var(--textColor);
     /* position: relative; */
-    background: url("./images/dominique-van-velsen-by-dominique-van-velsen-gorod-arkhite-1.jpg");
+    background: url("dominique-van-velsen-by-dominique-van-velsen-gorod-arkhite-1.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
