--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
 /* main colors */
 :root {
   --textColor: rgb(225, 225, 225);
-  --inputBCKcolor: rgba(100, 100, 100, 0.5);
+  --inputTextColor: rgb(36, 36, 36);
+  --inputBCKcolor: rgb(248, 237, 235);
 }
 
 /* global selectors */
@@ -12,11 +13,12 @@
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
 
 body {
   color: var(--textColor);
-  background: url("../assets/backgrundIMG.jpg");
+  background: url("../assets/image1.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -51,7 +53,7 @@ body {
   right: 0;
   top: 0;
   width: 30%;
-  height: 100%;
+  min-height: 100%;
 }
 
 #input_section {
@@ -61,19 +63,16 @@ body {
 
 input {
   background-color: var(--inputBCKcolor);
-  color: var(--textColor);
+  color: var(--inputTextColor);
   border: none;
   width: 60%;
   padding: 15px;
   margin: 5% 0% 10% 5%;
 }
-input:focus {
-  filter: invert(180);
-}
 
 button {
   background-color: var(--inputBCKcolor);
-  color: var(--textColor);
+  color: var(--inputTextColor);
   width: 20%;
   padding: 15px;
   border: none;
@@ -82,9 +81,6 @@ button {
   text-align: center;
   font-weight: bolder;
   text-transform: uppercase;
-}
-button:hover {
-  filter: invert(180);
 }
 
 button:focus,
@@ -95,13 +91,49 @@ input:focus {
 #info {
   margin-top: 10px;
   margin-left: 5%;
+  margin-right: 5%;
+}
+
+#cities {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 200px;
 }
 
 .default_cities {
   text-transform: uppercase;
   padding: 7px 0;
   cursor: pointer;
-  width: 100px;
+  width: 45%;
+  height: 50%;
+  text-align: center;
+  box-shadow: -1px 3px 5px 0 rgba(61, 61, 61, 0.5);
+  margin-bottom: 5%;
+  transition: all 300ms ease-in-out;
+  min-width: max-content;
+}
+
+#beijing_city,
+#newyork_city,
+#tokyo_city,
+#moscow_city {
+  position: relative;
+}
+#beijing_city p,
+#tokyo_city p {
+  text-transform: uppercase;
+  position: absolute;
+  top: 40%;
+  left: 30%;
+}
+#newyork_city p,
+#moscow_city p {
+  text-transform: uppercase;
+  position: absolute;
+  top: 40%;
+  left: 30%;
 }
 
 #weather_details_container {
@@ -115,8 +147,42 @@ input:focus {
 }
 
 #weather_details_content {
-  display: none;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: start;
+  gap: 2%;
+  height: 300px;
 }
+
+#humidity,
+#presure,
+#visibility,
+#wind,
+#temp_min,
+#temp_max {
+  width: 30%;
+  height: 45%;
+  min-width: min-content;
+  /* margin-left: 5%; */
+  margin-bottom: 7px;
+  padding-left: 3%;
+  padding-right: 3%;
+  box-shadow: -1px 3px 5px 0 rgba(61, 61, 61, 0.5);
+  transition: all 300ms ease-in-out;
+  box-sizing: border-box;
+  font-size: 1.2em;
+  font-weight: 400;
+}
+
+.default_cities:hover {
+  transform: translateX(-5px);
+  background-color: #303030;
+}
+
+/* #weather_details_content {
+  display: none;
+} */
 /* media queries */
 @media (max-width: 1200px) {
   input {
@@ -170,11 +236,9 @@ footer {
   font-size: small;
 }
 
-.hidden {
+/* .hidden {
   display: none;
-}
-
-
+} */
 
 /* Media queries for Extra large screens, TV: 1201px and more*/
 @media screen and (min-width: 1201px) {
@@ -197,7 +261,7 @@ footer {
 }
 
 /* Media queries for XS Mobile devices: 320px — 480px*/
-@media screen and (max-width: 320px){
+@media screen and (max-width: 320px) {
 }
 
 /*Media queries for  Print */
