--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,8 @@ input:focus {
   margin-bottom: 7px;
   padding-left: 3%;
   padding-right: 3%;
-  box-shadow: -1px 3px 5px 0 rgba(61, 61, 61, 0.5);
+  box-shadow: -1px 3px 5px 0 rgba(80, 80, 80, 0.5);
+  background-color:#333;
   transition: all 300ms ease-in-out;
   box-sizing: border-box;
   font-size: 1.2em;
