--- a/css/style.scss
+++ b/css/style.scss
@@ -21,26 +21,30 @@ $active-button-background-color:#e0e0e0;
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
+    height: 100vh;
 
     // Weather Info
 
     main {
       width: 100%;
+      height: 100%;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      position: absolute;
 
       // Main Weather Info
-      #main-content {
+      #main-content-container {
         backdrop-filter: blur(30px);
         padding: 10px;
+        height: 120px;
         width: 40%;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
         align-items: center;
-        position: relative;
-        top: 90px;
+        // position: relative;
+        // top: 90px;
 
         div {
           width: 5em;
@@ -73,7 +77,7 @@ $active-button-background-color:#e0e0e0;
       }
 
       // Side Weather Info
-      #side-content {
+      #side-content-container {
         backdrop-filter: blur(30px);
         position: absolute;
         right: 0;
@@ -168,6 +172,21 @@ li {
           }
     }
 
+}
+
+footer{
+  height: 100vh;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  
+  
+  p{
+    font-size: .8em;
+    padding-right: 150px;
+    padding-bottom: 10px;
+  }
 }
 
 .default-city:hover {
