positioned default cities, styled from zero week weather temps and main info

--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@
 
 * body {
   color: #ffffff;
-  background-color: #303030;
-  background: url("../assets/image1.jpg");
+  background-color: #272727;
+  background: url("../assets/image2.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -21,7 +21,7 @@
 
 * body main {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -32,7 +32,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: absolute;
+  margin-bottom: -30px;
 }
 
 * body main #main-content-container {
@@ -46,17 +46,119 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: absolute;
+  top: 15%;
 }
 
 * body main #main-content-container div {
   width: 5em;
   height: 5em;
-  border: 1px solid #242424;
+}
+
+* body main #main-content-container .celcius {
+  width: 8px;
+  height: 8px;
+  border: 2px solid;
+  border-radius: 100%;
+  position: absolute;
+  right: 0;
+}
+
+* body main #main-content-container #main-temp-container {
+  position: relative;
+}
+
+* body main #main-content-container #main-temp-container span.celcius {
+  width: 12px;
+  height: 12px;
+  border: 3px solid;
+}
+
+* body main #main-content-container #main-temp-container p {
+  font-size: 4em;
+  height: 100%;
+  text-align: center;
+  padding-top: 0.2em;
+}
+
+* body main #main-content-container #city-weather-container {
+  position: relative;
+}
+
+* body main #main-content-container #city-weather-container #weather-text {
+  text-transform: capitalize;
+  font-size: 1em;
+}
+
+* body main #main-content-container #city-weather-container span {
+  display: block;
+  padding: 8px 0 0 0;
+}
+
+* body main #main-content-container #city-weather-container #city-name {
+  font-size: 1.5;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0;
+}
+
+* body main #main-content-container #feels-like-container {
+  position: relative;
+}
+
+* body main #main-content-container #feels-like-container span.celcius {
+  top: 5px;
+  right: 10px;
+}
+
+* body main #main-content-container #feels-like-container #feels-like-temp {
+  font-size: 1.8em;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 70%;
+}
+
+* body main #main-content-container #feels-like-container #feels-like-text {
+  font-size: 1em;
+  text-transform: capitalize;
+  position: absolute;
+  bottom: 0;
+}
+
+* body main #main-content-container #local-date-container {
+  position: relative;
+}
+
+* body main #main-content-container #local-date-container #time {
+  font-size: 1.2em;
+  display: block;
+  margin-bottom: 10px;
+}
+
+* body main #main-content-container #local-date-container #week-day {
+  font-size: 1em;
+  text-transform: capitalize;
+}
+
+* body main #main-content-container #local-date-container p:last-of-type {
+  font-size: 0.6em;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0;
 }
 
 * body main #main-content-container #weather-detail-button {
@@ -78,8 +180,8 @@
 }
 
 * body main #main-content-container #weather-detail-button:active {
-  -webkit-transform: translateY(1px);
-          transform: translateY(1px);
+  -webkit-transform: translate(1px, 1px);
+          transform: translate(1px, 1px);
 }
 
 * body main #side-content-container {
@@ -90,6 +192,197 @@
   top: 0;
   width: 30%;
   min-height: 100%;
+}
+
+* body main #side-content-container #input-section {
+  margin-top: 20px;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  height: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+* body main #side-content-container #input-section input,
+* body main #side-content-container #input-section button {
+  background-color: #ececec;
+  border: none;
+  height: 100%;
+  outline: #ececec;
+}
+
+* body main #side-content-container #input-section input {
+  width: 70%;
+  padding: 9px 12px;
+}
+
+* body main #side-content-container #input-section button {
+  width: 20%;
+  font-size: 0.8em;
+  font-weight: 600;
+  text-transform: uppercase;
+  min-width: -webkit-max-content;
+  min-width: -moz-max-content;
+  min-width: max-content;
+  padding: 9px 12px;
+  color: #303030;
+  cursor: pointer;
+}
+
+* body main #side-content-container #input-section button:hover {
+  background-color: #e0e0e0;
+}
+
+* body main #side-content-container #input-section button:active {
+  -webkit-transform: scale(0.985);
+          transform: scale(0.985);
+}
+
+* body main #side-content-container #aside-content {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+* body main #side-content-container #aside-content #cities {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+* body main #side-content-container #aside-content #cities ul {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 30px;
+}
+
+* body main #side-content-container #aside-content #cities ul li.default-city {
+  padding-top: 20px;
+}
+
+* body main #side-content-container #aside-content #week-weather-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+* body main #side-content-container #aside-content #week-weather-container #week-weather-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+* body main #side-content-container #aside-content #week-weather-container #week-weather-content ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 100px 6.5% 0;
+  gap: 10%;
+}
+
+* body main #side-content-container #aside-content #week-weather-container #week-weather-content ul li {
+  width: 100px;
+  height: 130px;
+  margin-bottom: 20px;
+  background-color: #272727;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+* body main #side-content-container #aside-content #week-weather-container #week-weather-content ul li .fetched-value-container {
+  position: relative;
+  width: 100%;
+}
+
+* body main #side-content-container #aside-content #week-weather-container #week-weather-content ul li .fetched-value-container .fetched-value {
+  font-size: 3.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 70%;
+}
+
+* body main #side-content-container #aside-content #week-weather-container #week-weather-content ul li .fetched-value-container span {
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+  width: 10px;
+  height: 10px;
+  border: 2px solid;
+  border-radius: 100%;
+}
+
+* body main #side-content-container #aside-content #week-weather-container #week-weather-content ul li p {
+  width: 100%;
+  height: 2.5em;
+  font-size: 1em;
+  text-transform: capitalize;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
 }
 
 .hidden {
@@ -144,61 +437,7 @@ li {
   transition: all 500ms ease-in-out;
 }
 
-#input-section {
-  margin-top: 20px;
-  margin-left: 2.5%;
-  margin-right: 2.5%;
-  height: 35px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-}
-
-#input-section input, #input-section button {
-  background-color: #ECECEC;
-  border: none;
-  height: 100%;
-  outline: #ECECEC;
-}
-
-#input-section input {
-  width: 70%;
-  padding: 9px 12px;
-}
-
-#input-section button {
-  width: 20%;
-  font-size: .8em;
-  font-weight: 600;
-  text-transform: uppercase;
-  min-width: -webkit-max-content;
-  min-width: -moz-max-content;
-  min-width: max-content;
-  padding: 9px 12px;
-  color: #303030;
-  cursor: pointer;
-}
-
-#input-section button:hover {
-  background-color: #e0e0e0;
-}
-
-#input-section button:active {
-  -webkit-transform: scale(0.985);
-          transform: scale(0.985);
-}
-
 footer {
-  height: 100vh;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -209,10 +448,11 @@ footer {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  height: 30px;
 }
 
 footer p {
-  font-size: .8em;
+  font-size: 0.8em;
   padding-right: 50%;
   padding-bottom: 10px;
 }
