--- a/css/style.scss
+++ b/css/style.scss
@@ -1,10 +1,10 @@
 $pirmary-text-color: #ffffff;
 $secondary-text-color: #303030;
-$pirmary-background-color: #303030;
+$pirmary-background-color: #272727;
 $secondary-background-color: #b4b4b4;
 $thirdary-background-color: #242424;
-$input-background-color:#ECECEC;
-$active-button-background-color:#e0e0e0;
+$input-background-color: #ececec;
+$active-button-background-color: #e0e0e0;
 
 * {
   margin: 0;
@@ -15,7 +15,7 @@ $active-button-background-color:#e0e0e0;
   body {
     color: $pirmary-text-color;
     background-color: $pirmary-background-color;
-    background: url("../assets/image1.jpg");
+    background: url("../assets/image2.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
@@ -27,11 +27,12 @@ $active-button-background-color:#e0e0e0;
 
     main {
       width: 100%;
-      height: 100%;
+      min-height: 100%;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      position: absolute;
+      margin-bottom: -30px;
+      // position: absolute;
 
       // Main Weather Info
       #main-content-container {
@@ -41,17 +42,117 @@ $active-button-background-color:#e0e0e0;
         width: 40%;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: space-evenly;
         align-items: center;
-        // position: relative;
-        // top: 90px;
+        position: absolute;
+        top: 15%;
 
         div {
           width: 5em;
           height: 5em;
-
-          border: 1px solid #242424;
         }
+
+        .celcius{
+          width: 8px;
+          height: 8px;
+          border: 2px solid;
+          border-radius: 100%;
+          position: absolute;
+          right: 0;
+        }
+
+        // MAIN TEMP
+        
+        #main-temp-container{
+          position: relative;
+
+          span.celcius{
+            width: 12px;
+            height: 12px;
+            border: 3px solid;
+          }
+
+          p{
+            font-size: 4em;
+            height: 100%;
+            text-align: center;
+            padding-top: 0.2em;
+          }
+        }
+
+        // CITY
+        #city-weather-container{
+          position: relative;
+
+          #weather-text{
+            text-transform: capitalize;
+            font-size: 1em;
+          }
+
+          span{
+            display: block;
+            padding: 8px 0 0 0;
+          }
+
+          #city-name{
+            font-size: 1.5;
+            text-transform: uppercase;
+            position: absolute;
+            bottom: 0;
+          }
+        }
+
+
+        // FEELS LIKE
+        #feels-like-container{
+          position: relative;
+
+          span.celcius{
+            top: 5px;
+            right: 10px;
+          }
+
+          #feels-like-temp{
+            font-size: 1.8em;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 70%;
+          }
+
+          #feels-like-text{
+            font-size: 1em;
+            text-transform: capitalize;
+            position: absolute;
+            bottom: 0;
+          }
+        }
+
+        // time stamp
+        #local-date-container{
+          position: relative;
+
+          #time{
+            font-size: 1.2em;
+            display: block;
+            margin-bottom: 10px;
+          }
+
+          #week-day{
+            font-size: 1em;
+            text-transform: capitalize;
+          }
+          p:last-of-type{
+            font-size: 0.6em;
+            text-transform: uppercase;
+            position: absolute;
+            bottom: 0;
+          }
+
+        }
+
+        // weather details BUTTON
 
         #weather-detail-button {
           background-color: $secondary-text-color;
@@ -71,7 +172,7 @@ $active-button-background-color:#e0e0e0;
           }
 
           &:active {
-            transform: translateY(1px);
+            transform: translate(1px, 1px);
           }
         }
       }
@@ -84,6 +185,145 @@ $active-button-background-color:#e0e0e0;
         top: 0;
         width: 30%;
         min-height: 100%;
+
+        // INPUT
+        #input-section {
+          margin-top: 20px;
+          margin-left: 2.5%;
+          margin-right: 2.5%;
+          height: 35px;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: nowrap;
+          justify-content: space-evenly;
+
+          input,
+          button {
+            background-color: $input-background-color;
+            border: none;
+            height: 100%;
+            outline: $input-background-color;
+          }
+
+          input {
+            width: 70%;
+            padding: 9px 12px;
+          }
+
+          button {
+            width: 20%;
+            font-size: 0.8em;
+            font-weight: 600;
+            text-transform: uppercase;
+            min-width: max-content;
+            padding: 9px 12px;
+            color: $secondary-text-color;
+            cursor: pointer;
+
+            &:hover {
+              background-color: $active-button-background-color;
+            }
+
+            &:active {
+              transform: scale(0.985);
+            }
+          }
+        }
+
+        // DEFAULT CITIES AND WEEK WEATHER
+        #aside-content {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+
+          // DEFAULT CITIES
+          #cities {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            ul {
+              width: 90%;
+              display: flex;
+              flex-direction: row;
+              flex-wrap: wrap;
+              justify-content: space-around;
+              margin-top: 30px;
+
+              li.default-city {
+                padding-top: 20px;
+              }
+            }
+          }
+
+          // WEEK WEATHER
+          #week-weather-container {
+            display: flex;
+            flex-direction: row;
+
+            #week-weather-content {
+              display: flex;
+
+              ul {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: space-around;
+                margin: 100px 6.5% 0;
+                gap: 10%;
+
+                // week weather elements
+                li {
+                  width: 100px;
+                  height: 130px;
+                  margin-bottom: 20px;
+                  background-color: $pirmary-background-color;
+                  position: relative;
+                  display: flex;
+                  flex-wrap: wrap;
+
+                  .fetched-value-container {
+                    position: relative;
+                    width: 100%;
+
+                    .fetched-value {
+                      font-size: 3.5em;
+                      // position: absolute;
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                      height: 70%;
+                    }
+
+                    span {
+                      position: absolute;
+                      top: 0.5em;
+                      right: 0.5em;
+                      width: 10px;
+                      height: 10px;
+                      border: 2px solid ;
+                      border-radius: 100%;
+                    }
+                  }
+
+                  p {
+                    width: 100%;
+                    height: 2.5em;
+                    font-size: 1em;
+                    text-transform: capitalize;
+                    text-align: center;
+                    position: absolute;
+                    bottom: 0;
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -131,59 +371,16 @@ li {
   font-weight: 400;
   transition: all 500ms ease-in-out;
 }
-#input-section{
-    margin-top: 20px;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-    height: 35px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-evenly;
 
-    input,button{
-        background-color: $input-background-color;
-        border: none;
-        height: 100%;
-        outline: $input-background-color;
-    }
-    
-    input{
-        width: 70%;
-        padding: 9px 12px ; 
-    }
-
-    button{
-        width: 20%;
-        font-size: .8em;
-        font-weight: 600;
-        text-transform: uppercase;
-        min-width: max-content;
-        padding: 9px 12px ; 
-        color: $secondary-text-color;
-        cursor: pointer;
-
-        &:hover{
-            background-color: $active-button-background-color;
-        }
-
-        &:active {
-            transform:scale(0.985);
-          }
-    }
-
-}
-
-footer{
-  height: 100vh;
+footer {
   position: relative;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  
-  
-  p{
-    font-size: .8em;
+  height: 30px;
+
+  p {
+    font-size: 0.8em;
     padding-right: 50%;
     padding-bottom: 10px;
   }
