--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@
   right: 0;
   top: 0;
   width: 30%;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 * body main #side-content-container #input-section {
@@ -240,6 +240,8 @@
 }
 
 * body main #side-content-container #aside-content {
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -330,10 +332,13 @@
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin: 100px 6.5% 0;
-  gap: 10%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 70px 4% 0;
+  gap: 2%;
+  height: 300px;
+  width: 420px;
 }
 
 * body main #side-content-container #aside-content #week-weather-container #week-weather-content ul li {
@@ -662,22 +667,12 @@
 }
 
 footer {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  position: absolute;
   height: 30px;
 }
 
 footer p {
   font-size: 0.8em;
-  padding-right: 50%;
   padding-bottom: 10px;
 }
 
